# llm-kit

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish-prod.yml  publish-test.yml
examples/: bedrock_smoke_test.py  gemini_smoke_test.py
llm_kit/core/: registry.py
llm_kit/providers/: __init__.py
llm_kit/providers/bedrock/: client.py
llm_kit/providers/bedrock/adapters/: base.py  claude.py
llm_kit/providers/gemini/: client.py
tests/providers/bedrock/: test_client.py
tests/providers/gemini/: test_client.py
