[tool.poetry]
name = "llm-kit"
version = "0.1.0"
description = "A unified toolkit for working with multiple LLM providers"
authors = ["Preetam Raj"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.10"
black = "^25.12.0"
pytest-asyncio = "^1.3.0"
python-dotenv = "^1.2.1"


[tool.poetry.group.gemini.dependencies]
google-genai = "^1.0.0"


[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
